refactor: Introduced RedisClientArgs for all Redis client options